feat : 어플리케이션 전체 테스트 작성

--- a/build.gradle
+++ b/build.gradle
@@ -71,7 +71,6 @@ project(':domain') {
 
         compileOnly 'org.projectlombok:lombok'
         annotationProcessor 'org.projectlombok:lombok'
-        testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
     }
     jar {
@@ -97,6 +96,7 @@ project(':application') {
         compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
         compile group: 'io.springfox', name: 'springfox-bean-validators', version: '2.9.2'
 
+        implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
         implementation 'org.springframework.boot:spring-boot-starter-mail'
         implementation 'mysql:mysql-connector-java'
         implementation 'org.springframework.boot:spring-boot-starter-web'
