--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ plugins {
     id 'maven'
 }
 
+def querydslProjects = [project(":domain")]
 
 subprojects {
 
@@ -128,4 +129,28 @@ project(':admin') {
 
     }
 
+}
+configure(querydslProjects) {
+
+    dependencies {
+        compile("com.querydsl:querydsl-core") // querydsl
+        compile("com.querydsl:querydsl-jpa") // querydsl
+        annotationProcessor("com.querydsl:querydsl-apt:4.3.1:jpa") // querydsl JPAAnnotationProcessor 사용 지정
+        annotationProcessor("jakarta.persistence:jakarta.persistence-api")
+        annotationProcessor("jakarta.annotation:jakarta.annotation-api")
+
+    }
+
+    def generated = 'src/main/generated'
+    sourceSets {
+        main.java.srcDirs += [generated]
+    }
+
+    tasks.withType(JavaCompile) {
+        options.annotationProcessorGeneratedSourcesDirectory = file(generated)
+    }
+
+    clean.doLast {
+        file(generated).deleteDir()
+    }
 }
