--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,10 @@ subprojects {
     }
 
     dependencies {
+        // jwt
+        implementation 'io.jsonwebtoken:jjwt:0.9.1'
+
+        testImplementation 'io.rest-assured:rest-assured:3.3.0'
 
         implementation 'org.springframework.boot:spring-boot-starter-log4j2'
         annotationProcessor 'org.projectlombok:lombok:1.18.8'
