--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ plugins {
     id 'maven'
 }
 
+def querydslProjects = [project(":domain")]
 
 subprojects {
 
@@ -43,6 +44,10 @@ subprojects {
     }
 
     dependencies {
+        // jwt
+        implementation 'io.jsonwebtoken:jjwt:0.9.1'
+
+        testImplementation 'io.rest-assured:rest-assured:3.3.0'
 
         implementation 'org.springframework.boot:spring-boot-starter-log4j2'
         annotationProcessor 'org.projectlombok:lombok:1.18.8'
@@ -128,4 +133,28 @@ project(':admin') {
 
     }
 
+}
+configure(querydslProjects) {
+
+    dependencies {
+        compile("com.querydsl:querydsl-core") // querydsl
+        compile("com.querydsl:querydsl-jpa") // querydsl
+        annotationProcessor("com.querydsl:querydsl-apt:4.3.1:jpa") // querydsl JPAAnnotationProcessor 사용 지정
+        annotationProcessor("jakarta.persistence:jakarta.persistence-api")
+        annotationProcessor("jakarta.annotation:jakarta.annotation-api")
+
+    }
+
+    def generated = 'src/main/generated'
+    sourceSets {
+        main.java.srcDirs += [generated]
+    }
+
+    tasks.withType(JavaCompile) {
+        options.annotationProcessorGeneratedSourcesDirectory = file(generated)
+    }
+
+    clean.doLast {
+        file(generated).deleteDir()
+    }
 }
